// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      testing
    </div>
  </legend>
  <div
    className="Flex rowGap0 columnGap2 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
          >
            <input
              checked={false}
              className="input sizeMd InputEnabled"
              disabled={false}
              id="choice-1"
              name="choice"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="radio"
              value="choice-1"
            />
          </div>
        </div>
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`RadioGroup renders a hidden legend 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      testing
    </div>
  </legend>
  <div
    className="Flex rowGap0 columnGap2 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
          >
            <input
              checked={false}
              className="input sizeMd InputEnabled"
              disabled={false}
              id="choice-1"
              name="choice"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="radio"
              value="choice-1"
            />
          </div>
        </div>
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`RadioGroup renders an error 1`] = `
<fieldset
  aria-describedby="testingErrorEx-error"
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      testing
    </div>
  </legend>
  <div
    className="Flex rowGap0 columnGap2 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
          >
            <input
              checked={false}
              className="input sizeMd InputEnabled"
              disabled={false}
              id="choice-1"
              name="choice"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="radio"
              value="choice-1"
            />
          </div>
        </div>
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
    id="testingErrorEx-error"
  >
    <div
      className="error alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="testingErrorEx-error"
      >
        <div
          className="box"
          role="alert"
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
          >
            <div
              className="FlexItem"
            >
              <div
                className="box"
              >
                <svg
                  aria-hidden={true}
                  aria-label=""
                  className="error icon iconBlock"
                  height={16}
                  role="img"
                  viewBox="0 0 24 24"
                  width={16}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              please pick one
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</fieldset>
`;

exports[`RadioGroup renders in different direction 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      testing
    </div>
  </legend>
  <div
    className="Flex rowGap4 columnGap0 xsDirectionRow"
  >
    <div
      className="FlexItem"
    >
      <div
        className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
          >
            <input
              checked={false}
              className="input sizeMd InputEnabled"
              disabled={false}
              id="choice-1"
              name="choice"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="radio"
              value="choice-1"
            />
          </div>
        </div>
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;
